feat(android): 添加存储和网络权限
- 添加读取外部存储权限以访问下载的音频文件
- 添加写入外部存储权限支持文件操作
- 添加网络权限以支持音频文件下载功能
- 添加访问网络状态权限以监测网络连接
- 添加访问WiFi状态权限以优化网络使用体验

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+<!--    读取外部存储权限，用于读取下载的音频文件    -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<!--    网络权限，用于下载音频文件    -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
